Fix spacing between .components-panel__body

--- a/packages/block-editor/src/components/inserter/style.scss
+++ b/packages/block-editor/src/components/inserter/style.scss
@@ -92,6 +92,7 @@ $block-inserter-search-height: 38px;
 	display: flex;
 	flex-wrap: wrap;
 	align-items: center;
+	align-content: flex-start;
 	justify-content: center;
 	flex-grow: 1;
 	overflow: auto;
